syntax = "proto3";

package ULZProto;
import "message.proto";
import "common.proto";
option csharp_namespace         = "ULZAsset.ProtoMod";
option go_package               = ".;proto";



service RoomService {
    rpc CreateRoom      (RoomCreateReq)     returns (Room){ };
    rpc GetRoomList     (RoomCreateReq)     returns (stream Room){ }; 
    rpc GetRoomInfo     (RoomReq)           returns (Room){};
    rpc UpdateRoom      (RoomCreateReq)     returns (Room){};
    rpc UpdateCard      (RoomUpdateCardReq) returns (Empty){};      
    rpc BroadcastInfo   (RoomReq)           returns (RoomBroadcastInfo){};
    rpc ServerBroadcast (RoomReq)           returns (stream RoomMsg){};
    rpc SendMessage     (RoomMsg)           returns (Empty){};
    rpc QuitRoom        (RoomReq)           returns (Empty){}
    rpc QuickPair       (RoomCreateReq)     returns (Room){};
    rpc JoinRoom        (RoomReq)           returns (Room){};
}
